Add testcase and some implemets

--- a/test/index.html
+++ b/test/index.html
@@ -23,14 +23,15 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/models/BoardModel.js"></script>
     <script src="scripts/models/ReversiModel.js"></script>
-    <script src="scripts/collections/ReversiCollection.js"></script>
+    <script src="scripts/models/CellModel.js"></script>
+    <script src="scripts/collections/CellCollection.js"></script>
+    <script src="scripts/views/ReversiView.js"></script>
+    <script src="scripts/views/CellView.js"></script>
+    <script src="scripts/views/BoardView.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/models/BoardModelSpec.js"></script>
-    <script src="spec/models/ReversiModelSpec.js"></script>
-    <script src="spec/collections/ReversiCollectionSpec.js"></script>
+    <script src="spec/collections/CellCollectionSpec.js"></script>
 
     <script>mocha.run()</script>
 </body>
