--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/collections/CellCollectionSpec.js"></script>
+    <script src="spec/models/CellModelSpec.js"></script>
 
     <script>mocha.run()</script>
 </body>
