--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,10 @@
         <![endif]-->
         <div id="main">
         </div>
+        <div id="settings">
+            <input type="radio" name="color" value="black" checked>black
+            <input type="radio" name="color" value="white">white
+        </div>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
