--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,12 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/models/ReversiModel.js"></script>
     <script src="scripts/models/CellModel.js"></script>
+    <script src="scripts/models/.js"></script>
+    <script src="scripts/models/CPUStrategy/StrategyModel.js"></script>
+    <script src="scripts/models/CPUStrategy/EasyStrategyModel.js"></script>
+    <script src="scripts/models/CPUStrategy/NormalStrategyModel.js"></script>
+    <script src="scripts/models/CPUStrategy/HardStrategyModel.js"></script>
+    <script src="scripts/models/CPUModel.js"></script>
     <script src="scripts/collections/CellCollection.js"></script>
     <script src="scripts/views/ReversiView.js"></script>
     <script src="scripts/views/CellView.js"></script>
@@ -33,6 +39,7 @@
     <!-- include spec files here... -->
     <script src="spec/collections/CellCollectionSpec.js"></script>
     <script src="spec/models/CellModelSpec.js"></script>
+    <script src="spec/views/BoardViewSpec.js"></script>
 
     <script>mocha.run()</script>
 </body>
