Add candidates mark

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="mocha"></div>
+    <div id="workspace"></div>
     <script src="bower_components/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="bower_components/chai/chai.js"></script>
@@ -22,10 +23,10 @@
     <script src="bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
+    <script src="scripts/util/underscore.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/models/ReversiModel.js"></script>
     <script src="scripts/models/CellModel.js"></script>
-    <script src="scripts/models/.js"></script>
     <script src="scripts/models/CPUStrategy/StrategyModel.js"></script>
     <script src="scripts/models/CPUStrategy/EasyStrategyModel.js"></script>
     <script src="scripts/models/CPUStrategy/NormalStrategyModel.js"></script>
