--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
         </script>
 
         <!-- build:js scripts/main.js -->
+        <script src="scripts/util/underscore.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/models/CPUStrategy/StrategyModel.js"></script>
         <script src="scripts/models/CPUStrategy/EasyStrategyModel.js"></script>
