--- a/test/index.html
+++ b/test/index.html
@@ -40,6 +40,7 @@
     <!-- include spec files here... -->
     <script src="spec/collections/CellCollectionSpec.js"></script>
     <script src="spec/models/CellModelSpec.js"></script>
+    <script src="spec/models/CPUStrategy/StrategyModelSpec.js"></script>
     <script src="spec/views/BoardViewSpec.js"></script>
 
     <script>mocha.run()</script>
