Implements Normal level

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
             </div>
             <div id="settings">
                 <input type="radio" name="level" value="easy" checked>easy
-                <input type="radio" name="level" value="normal" disabled>normal
+                <input type="radio" name="level" value="normal">normal
                 <input type="radio" name="level" value="hard" disabled>hard
             </div>
         </div>
