--- a/test/index.html
+++ b/test/index.html
@@ -41,6 +41,7 @@
     <script src="spec/collections/CellCollectionSpec.js"></script>
     <script src="spec/models/CellModelSpec.js"></script>
     <script src="spec/models/CPUStrategy/StrategyModelSpec.js"></script>
+    <script src="spec/models/CPUStrategy/NormalStrategyModelSpec.js"></script>
     <script src="spec/views/BoardViewSpec.js"></script>
 
     <script>mocha.run()</script>
