--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>reversi</title>
-        <meta name="description" content="">
+        <meta name="keywords" content="othello,reversi,オセロ,game,ゲーム">
+        <meta name="description" content="Othello game">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
